--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,8 @@ requires-python = ">=3.13"
 dependencies = [
     "gtfs-realtime-bindings>=2.0.0",
     "requests>=2.32.5",
+    "duckdb>=1.0.0",
+    "pydantic>=2.0.0",
+    "schedule>=1.2.0",
+    "python-dotenv>=1.0.0",
 ]
