--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,4 +11,7 @@ dependencies = [
     "pydantic>=2.0.0",
     "schedule>=1.2.0",
     "python-dotenv>=1.0.0",
+    "streamlit>=1.54.0",
+    "plotly>=6.5.2",
+    "pandas>=2.3.3",
 ]
